methods.picture.PictureMono3.scala.error
Erreur de compilation :
PictureMono3:6: error: '=>' expected but '}' found.
    }
    ^